--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -19,8 +19,8 @@ jobs:
         with:
           github_user_name: Bintang270802
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-snake.svg?palette=github-light&color_snake=#FF69B4&color_dots=#FFB6C1,#FFC0CB,#FFD700,#FF1493,#FF69B4
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#FF1493&color_dots=#4B0082,#8B008B,#FF69B4,#FFB6C1,#FFC0CB
           
       - name: push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
